fixed spacing in css nav bar

--- a/Frontend/css/style2.css
+++ b/Frontend/css/style2.css
@@ -40,12 +40,6 @@ nav ul li input[type="text"]:focus {
 }
 
 
-nav ul li {
-  display: inline-block;
-  list-style: none;
-  margin: 10px 10px;
-  background-color: none;
-}
 
 @keyframes fadeIn {
   from {
